syntax = "proto3";

package storage;

option go_package = "myutilityx.com/grpc";

service Storage{
    rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
    rpc GetFile (GetFileRequest) returns (GetFileResponse);
}

message UploadFileRequest {
    string filename = 1;
    string fileData = 2;
  }
  
  message UploadFileResponse {
    string fileId = 1;
  }

  message GetFileRequest {
    string filename = 1;
    string fileId = 2;
  }
  
  message GetFileResponse {
    string file = 1;
  }
